Add new managers, improve logic / handling for publishing data managers, updated some tests